tests/baselines/reference/parserConstructorDeclaration3.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration3.ts (1 errors) ====
    class C {
      export constructor() { }
      ~~~~~~
!!! error TS1031: 'export' modifier cannot appear on a class element.
    }